--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -68,7 +68,7 @@ button:focus-visible {
 } */
 
 h1, h2 { margin-left: 16px;}
-table {border-collapse: collapse;margin-left: 32px;}
+/* table {border-collapse: collapse;margin-left: 32px;} */
 th, td {
     border: 1px solid #ddd;
     padding: 12px;
