--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,18 +66,67 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 } */
-
-h1, h2 { margin-left: 16px;}
-/* table {border-collapse: collapse;margin-left: 32px;} */
-th, td {
-    border: 1px solid #ddd;
-    padding: 12px;
-    text-align: center;
+ 
+/* Headings */
+h1, h2 {
+  margin-left: 16px;
 }
-th {background-color: #f2f2f2;}
-tr:nth-child(even) {background-color: #f9f9f9;}
-.cuForm { margin-left: 32px;}
-input, select { margin-bottom: 4px;margin-right: 12px;}
-nav {background-color: #cecece;padding: 16px;}
-a {margin-left: 16px;}
-.homepageDescription {margin-left: 32px;}
+
+/* Table styles */
+th, td {
+  border: 1px solid #ddd;
+  padding: 12px;
+  text-align: center;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+/* Forms */
+.cuForm {
+  margin-left: 32px;
+}
+
+input, select {
+  margin-bottom: 4px;
+  margin-right: 12px;
+}
+
+/* Navigation bar */
+nav {
+  background-color: #cecece;
+  position: relative;
+  width: 100%;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+}
+
+nav a {
+  margin-right: 15px;
+  text-decoration: none;
+}
+
+/* Reset Button */
+.reset-button {
+  margin-left: auto;
+  margin-right: 20px;
+  padding: 10px;
+  background-color: rgba(247, 27, 27, 0.764);
+  color: white;
+  font-weight: 500;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Home Page Text Block */
+.homepageDescription {
+  margin-left: 32px;
+}
