Fixed favicon and added github button

--- a/frontend/src/styles/toolbar.css
+++ b/frontend/src/styles/toolbar.css
@@ -10,7 +10,6 @@
   /* margin-top: 1rem; */
 }
 
-
 .toolbar-left {
   display:flex;
   align-items: center;
@@ -19,7 +18,9 @@
 }
 
 .toolbar-right {
-  /* border: 1px solid orange; */
+  display: flex;
+  gap: 2rem;
+  align-items: center;
 }
 
 .reset-button:hover {
